--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 #headerDiv{
-    background-color: red;
+    background-color:#46A9BE;
     text-align: center;
     color: cornsilk;
     margin: 5px;
